@@ -1,6 +1,4 @@
-DIST sssd-1.4.1.tar.gz 1074193 RMD160 d2a0b0e7517f5638feea1ad2cffe36a7a928ab81 SHA1 cca8ffc3bec979e1f1115f78845825869e6a46c7 SHA256 3eb12c20d2a9d6d40148a6de34267f9ee2153ec68ac9ab1effb13d36701c5ce5
 DIST sssd-1.5.0.tar.gz 1162112 RMD160 79fb5467085987ad23ee87f1185624be26809415 SHA1 65eef0b85c32b9a278d61c31a0a7e388b7fdd909 SHA256 0ae6a706fcd39355deb0448f3e585f7dbe94577077a6bf2b44757ccd98a6cfe8
-EBUILD sssd-1.4.1.ebuild 3602 RMD160 4152b1c8be5c17304a9db89540e701b919f0790c SHA1 d36819ff7557c22b43bfffa6b3b2379c63e3711b SHA256 da614b84d56052cfbe137f8e5e9cbbaddc4179a61e71fa26d5f1a9144ad3adfa
 EBUILD sssd-1.5.0.ebuild 3602 RMD160 1f94b2cc06f53810f3fdc4528a00faa5f293c01a SHA1 7a37574e0c75a97850ed34d36672e08ebd44e00c SHA256 ed65f9a3b6ffb14bac63ddd5ca4156c745a8c8ed98d52b8166cf82b7ccb9e631
-MISC ChangeLog 366 RMD160 504b5f9d63f3a71199281cd98173670da28b724c SHA1 f8f5f6a4ac9dae641cbc936cd45fefc8c6fa435a SHA256 58b9346cdef45f818f58d894490c8b02b5e90497fa6e5048eb43421ca0ba993e
+MISC ChangeLog 460 RMD160 9211b69e5ff2020fc4963fbaa767e10f8175389b SHA1 fbb685fea86209a7b9f73d1617bdd2bfde48348b SHA256 63b77ad607c2b54860fb57e26ebc485652075d119e139de5d2ca699d91aff00d
 MISC metadata.xml 361 RMD160 ed62203e3fe097dbc226cf78696447dbcd0f3596 SHA1 2ed4d9a03f185ab2058cb7d33ef11ca05d91626d SHA256 6c5d51b5ad0496ff8ba4d4342b1ebf9a34b09ceb66fb998e9cbd9ea360f82918
